[gd_scene load_steps=7 format=2]

[ext_resource path="res://LoonyLips.gd" type="Script" id=1]
[ext_resource path="res://gfx/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 3 )

[node name="LoonyLips" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="HeaderText" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "HeaderText"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0
alignment = 2

[node name="DisplayText" type="Label" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 976.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 400 )
custom_fonts/font = SubResource( 2 )
text = "DisplayText"
autowrap = true

[node name="PlayerText" type="LineEdit" parent="VBoxContainer"]
margin_top = 504.0
margin_right = 976.0
margin_bottom = 552.0
custom_fonts/font = SubResource( 3 )
[connection signal="text_entered" from="VBoxContainer/PlayerText" to="." method="_on_PlayerText_text_entered"]
